--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,13 @@
 </head>
 <body>
 
-<h1>Snippit</h1>
-<form name="sentenceForm">
-    <label field="sentence">Please enter a sentence:</label><br>
-    <input type="text" id="sentence" name="sentence"><br>
-    <input type="submit">
-</form>
+<div class="homepage">
+    <h1>Enter your phrase!</h1>
+    <form name="sentenceForm">
+        <input type="text" id="sentence" name="sentence" placeholder="Input phrase here(30 words maximum)"><br>
+        <input type="submit">
+    </form>
+</div>
 
 <script src="main.js"></script>
 </body>
