--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,10 +11,7 @@
 
 </head>
 
-
-
 <body>
-
     <div class="homepage">
         <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/snippit-logo.png" alt="snippit logo"
             class="m-3" style="width:9%">
@@ -30,8 +27,13 @@
         </div> -->
         
         <div class="p5 text-center text-light">
-            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/trump.png" alt="trump stick figure" style="width:9%">
-            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/ew.png" alt="trump stick figure" style="width:9%">
+            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/penguin.png" alt="penguin" style="width: 10%">
+            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/trump.png" alt="trump stick figure" style="width: 9%">
+            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/ew.png" alt="andrew tate" style="width: 9%">
+            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/ben.png" alt="ben shapiro" style="width: 11%">
+            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/cookie.png" alt="giraffe" style="width: 10%">
+            <img src="/Users/Jenny/Documents/coding/HackTheNorth2022-1/images/giraffepng.png" alt="giraffe" style="width: 20%">
+
 
 
             <h1 class="m-5" style="font-size: 80px; font-family: 'Nabla', cursive;">enter ur phrase</h1>
